--- a/data/projects.json
+++ b/data/projects.json
@@ -13,7 +13,7 @@
       "/images/projects/Founding-General-Meeting-03.webp"
     ],
     "videoUrl": null,
-    "artistIds": ["artist-001", "artist-002"]
+    "artistIds": ["artist-001", "artist-002", "artist-003", "artist-004", "artist-005", "artist-006", "artist-007", "artist-008", "artist-009"]
   },
   {
     "id": "project-002",
@@ -25,7 +25,7 @@
     "description": "경기아트콜렉티브 오픈닝 파티에 여러분을 초대합니다!\n\n경기도 예술가들을 지원하고 문화예술 생태계 활성화를 목표로 하는 생산자 협동조합, 경기아트콜렉티브 협동조합이 드디어 그 문을 엽니다.\n\n### 조합 소개\n\n경기아트콜렉티브는 자주적·자립적·자치적인 협동조합 활동을 통해 예술 창작 활동의 지속가능성을 도모하며, 지역사회 문화예술 발전에 기여하고자 합니다.\n\n### 초대의 말\n\n저희 조합의 시작을 함께 축하하고, 앞으로의 활동에 많은 관심과 기대를 부탁드립니다. 예술가와 지역 주민, 그리고 문화예술에 관심 있는 모든 분들의 많은 참여 바랍니다.",
     "gallery": null,
     "videoUrl": null,
-    "artistIds": ["artist-001", "artist-002"]
+    "artistIds": ["artist-001", "artist-004", "artist-005", "artist-009"]
   },
   {
     "id": "project-003",
@@ -45,6 +45,6 @@
       "/images/projects/studioparty7.webp"
     ],
     "videoUrl": null,
-    "artistIds": ["artist-001", "artist-002"]
+    "artistIds": ["artist-001", "artist-002", "artist-003", "artist-004", "artist-006", "artist-008"]
   }
 ]
